force-app/main/default/objects/Contact/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>permanent_Employee</fullName>
                <label>permanent Employee</label>
            </value>
            <value>
                <fullName>contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>