force-app/main/default/objects/Contact/fields/Leave_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Leave_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Tracker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>