force-app/main/default/objects/Contact/listViews/Quadrobay_Employees.listView-meta.xml
<ListView>
    <fullName>Quadrobay_Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Employee_Type__c</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Quadrobay</value>
    </filters>
    <label>Quadrobay Employees</label>
</ListView>